trunk/Archive2/64/555b024c83d72f/output
main.cpp: In function 'std::istream& operator>>(std::istream&, Ship&)':
main.cpp:68:17: error: 'type_string' was not declared in this scope
     if (!(in >> type_string >> coords)) 
                 ^
